# fine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: client_config.json  server_config.json
examples/: README.md  backtest_config.json  data_config.json  indicator_config.json  template.json
fine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
market/: __main__.py  backtest.py  cache.py  fee.py  portfolio.py  strategy.py
market/cli/: __init__.py  commands.py
market/client/: __init__.py
market/indicators/: __init__.py  base.py  trend.py
market/indicators/momentum/: __init__.py  rsi.py
market/indicators/oscillator/: wr.py
market/indicators/trend/: __init__.py  bbi.py  ema.py  ma.py  sar.py
market/indicators/volatility/: donchian_channel.py
market/indicators/volume/: __init__.py  cmf.py
market/providers/: __init__.py  base.py
market/server/: __init__.py
market/strategies/: __init__.py
market/strategies/custom/: __init__.py  bollinger_bands_strategy.py  breakout.py  example.py  kdj_strategy.py  macd_divergence.py  momentum_reversal.py
market_data/: __init__.py  __main__.py  backtest.py  providers.py  risk.py
market_data/cli/: __init__.py  commands.py
market_data/indicators/: momentum.py  oscillator.py  volatility.py  volume.py
market_data/indicators/momentum/: kdj.py  macd.py  stoch_rsi.py
market_data/indicators/volatility/: __init__.py  bollinger_bands.py  keltner_channel.py
market_data/indicators/volume/: vr.py  vwap.py  williams_ad.py
market_data/providers/: akshare.py  baostock.py  sina.py  tencent.py  yfinance.py
market_data/strategies/: __init__.py
market_data/strategies/custom/: __init__.py  atr_strategy.py  bollinger_band.py  example.py  ma_alignment.py  macd_bbi.py  rsi_mean_reversion.py  trend_confirmation.py  volume_breakout.py  williams_r.py
src/fine/: __init__.py  backtest.py  config.py  period.py  strategy.py
src/fine/cli/: __init__.py  __main__.py  backtest_cmd.py  commands.py  i18n.py
src/fine/cli/commands/: __init__.py  calculate.py  cd.py  data.py  news.py
src/fine/indicators/: __init__.py  base.py
src/fine/indicators/momentum/: __init__.py  kdj.py  macd.py  rsi.py  stoch_rsi.py
src/fine/indicators/oscillator/: __init__.py  wr.py
src/fine/indicators/trend/: __init__.py  bbi.py  ema.py  ma.py  sar.py
src/fine/indicators/volatility/: __init__.py  atr.py  bollinger_bands.py  donchian_channel.py  keltner_channel.py
src/fine/indicators/volume/: __init__.py  cmf.py  mfi.py  obv.py  vr.py  vwap.py  williams_ad.py
src/fine/providers/: __init__.py  akshare.py  baidu.py  baostock.py  base.py  eastmoney.py  efinance.py  finnhub.py  netease.py  news_provider.py  playwright_scraper.py  sina.py  tencent.py  tushare.py  utils.py  yfinance.py
src/fine/store/: __init__.py  base.py  csv.py  memory.py
src/fine/strategies/: __init__.py  data.py  indicators.py  portfolio.py  strategy.py
src/fine/tasks/: manager.py
tests/: __init__.py  conftest.py  rsi_strategy.py  test_backtest.py  test_cache.py  test_calculate.py  test_cli.py  test_fee.py  test_indicators.py  test_market_data.py  test_news_filter.py  test_news_provider.py  test_portfolio.py  test_providers.py  test_store.py  test_utils.py
