[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fine"
version = "0.2.0"
description = "Python market data and trading backtesting library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "fine Team", email = "team@fine.io"}
]
keywords = ["quant", "trading", "backtest", "stock", "finance", "technical-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "akshare>=1.18.49",
    "baostock>=0.8.9",
    "yfinance>=0.2.66",
    "platformdirs>=4.9.4",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "isort>=5.13.2",
    "flake8>=7.3.0",
    "pylint>=3.3.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
]
plot = [
    "matplotlib>=3.10.8",
    "plotly>=5.24.1",
]

[project.urls]
Homepage = "https://github.com/qutianyu/fine"

[project.scripts]
fine = "fine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fine*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
fine = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
order_by_type = true
known_first_party = ["fine"]
known_third_party = ["numpy", "pandas", "requests", "akshare", "baostock", "yfinance"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["fine"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
